Update with latest bibs.

--- a/_posts/2017-01-16-liza16.md
+++ b/_posts/2017-01-16-liza16.md
@@ -20,7 +20,7 @@ author:
 - given: Marek
   family: Grześ
 date: 2017-01-16
-address: 
+address: Delft, The Netherlands
 publisher: PMLR
 container-title: Proceedings of The 13th International Conference on Grammatical Inference
 volume: '57'
