--- a/_posts/2017-01-16-arrivault16.md
+++ b/_posts/2017-01-16-arrivault16.md
@@ -24,7 +24,7 @@ author:
 - given: Remi
   family: Eyraud
 date: 2017-01-16
-address: 
+address: Delft, The Netherlands
 publisher: PMLR
 container-title: Proceedings of The 13th International Conference on Grammatical Inference
 volume: '57'
