--- a/_posts/2017-01-16-fukunaga16.md
+++ b/_posts/2017-01-16-fukunaga16.md
@@ -34,7 +34,7 @@ author:
 - given: Hiroshi
   family: Sakamoto
 date: 2017-01-16
-address: 
+address: Delft, The Netherlands
 publisher: PMLR
 container-title: Proceedings of The 13th International Conference on Grammatical Inference
 volume: '57'
