--- a/_posts/2017-01-16-groz16.md
+++ b/_posts/2017-01-16-groz16.md
@@ -25,7 +25,7 @@ author:
 - given: Nicolas
   family: Brémond
 date: 2017-01-16
-address: 
+address: Delft, The Netherlands
 publisher: PMLR
 container-title: Proceedings of The 13th International Conference on Grammatical Inference
 volume: '57'
