--- a/_posts/2017-01-16-pellegrino16.md
+++ b/_posts/2017-01-16-pellegrino16.md
@@ -27,7 +27,7 @@ author:
 - given: Sicco
   family: Verwer
 date: 2017-01-16
-address: 
+address: Delft, The Netherlands
 publisher: PMLR
 container-title: Proceedings of The 13th International Conference on Grammatical Inference
 volume: '57'
