--- a/_posts/2017-01-16-xi16.md
+++ b/_posts/2017-01-16-xi16.md
@@ -21,7 +21,7 @@ author:
 - given: Dai
   family: Zhuang
 date: 2017-01-16
-address: 
+address: Delft, The Netherlands
 publisher: PMLR
 container-title: Proceedings of The 13th International Conference on Grammatical Inference
 volume: '57'
